asteria/core/tests/errors/elaboration_errors/type_constructor_already_defined.asteriacore
data Unit where
   | MkUnit : Test$Unit()
   ;;

data Unit where
   | MkUnit : Test$Unit()
   ;;
